# wilhelm_renderer_imgui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
cpp/: CMakeLists.txt  imgui_wrapper.cpp  imgui_wrapper.h
examples/: demo.rs
src/: lib.rs
