[package]
name = "wilhelm_renderer_imgui"
version = "0.1.0"
edition = "2021"
description = "Dear ImGui integration for wilhelm_renderer"
license = "MIT"
repository = "https://github.com/algonents/wilhelm_renderer_imgui"
keywords = ["imgui", "opengl", "graphics", "gui", "gamedev"]
categories = ["gui", "graphics", "rendering", "game-development"]

exclude = ["target", "imgui.ini"]

[dependencies]
wilhelm_renderer = { path = "../sky-renderer" }

[build-dependencies]
cmake = "0.1"
